methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:9: error: ';' expected but 'else' found.
       else
       ^